# hls-mediaserver

./: .gitignore  README.md  default.nix  hls-mediaserver.cabal  nixpkgs.json  shell.nix
app/: Main.hs
migration-scripts/: add-hash-resource-field.sql  create_refresh_table.sql  create_resource_table.sql  create_user_table.sql
src/API/: APISpec.hs  Handlers.hs  Interfaces.hs  Models.hs
src/API/Resource/: APISpec.hs  Handlers.hs  Models.hs
src/API/Users/: APISpec.hs  Handlers.hs  Models.hs
